--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,7 @@ jobs:
             python/jupytergis_core/dist/jupytergis*
             python/jupytergis_lab/dist/jupytergis*
             python/jupytergis_qgis/dist/jupytergis*
+            python/jupytergis_lite/dist/jupytergis*
           if-no-files-found: error
 
   python_tests:
@@ -251,3 +252,118 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
         with:
           ignore_links: 'lite/'
+
+  build-lite:
+    name: Build JupyterLite artifacts
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/setup-micromamba@v2
+        with:
+          micromamba-version: '1.5.5-0'
+          environment-name: build-env
+          create-args: >-
+            python=3.10
+            pip
+            jupyterlite-core
+            jupyterlite-xeus
+            jupyter_server
+
+      - name: Download extension package
+        uses: actions/download-artifact@v4
+        with:
+          name: extension-artifacts
+
+      - name: debug
+        run: ls
+
+      - name: Install the extension
+        shell: bash -l {0}
+        run: |
+          set -eux
+          cp ./jupytergis_core/dist/jupytergis*.whl jupytergis_core-0.0.1-py3-none-any.whl
+          cp ./jupytergis_lab/dist/jupytergis*.whl jupytergis_lab-0.0.1-py3-none-any.whl
+          cp ./jupytergis_qgis/dist/jupytergis*.whl jupytergis_qgis-0.0.1-py3-none-any.whl
+          cp ./jupytergis_lite/dist/jupytergis*.whl jupytergis_lite-0.0.1-py3-none-any.whl
+          cp ./jupytergis/dist/jupytergis*.whl jupytergis-0.0.1-py3-none-any.whl
+
+      - name: Build JupyterLite
+        shell: bash -l {0}
+        working-directory: lite
+        run: |
+          set -eux
+          mkdir -p content && cp ../examples/*.jGIS ../examples/*.qgz ../examples/*.json ../examples/*.tif ../examples/*.zip ../examples/*.ipynb ../examples/*.gif ./content
+          jupyter lite build --contents content --output-dir dist
+
+      - name: Upload Lite artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: lite-artifacts
+          path: ./lite/dist
+          retention-days: 30
+
+  integration-tests-lite:
+    name: Integration tests Lite
+    needs: build-lite
+    runs-on: ubuntu-latest
+
+    env:
+      PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/pw-browsers
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          micromamba-version: '1.5.5-0'
+          environment-name: gis
+          create-args: >-
+            python=3.9
+            jupyterlab
+
+      - name: Download extension package
+        uses: actions/download-artifact@v4
+        with:
+          name: lite-artifacts
+          path: dist
+
+      - name: Install dependencies
+        shell: bash -l {0}
+        working-directory: ui-tests
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        run: jlpm install
+
+      - name: Set up browser cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ github.workspace }}/pw-browsers
+          key: ${{ runner.os }}-${{ hashFiles('ui-tests/yarn.lock') }}
+
+      - name: Install browser
+        shell: bash -l {0}
+        run: npx playwright install chromium
+        working-directory: ui-tests
+
+      - name: Execute integration tests
+        shell: bash -l {0}
+        working-directory: ui-tests
+        run: jlpm run test:lite
+
+      - name: Upload Playwright Test report
+        id: upload-galata-artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jupytergis-lite-playwright-tests
+          path: |
+            ui-tests/test-results
+            ui-tests/playwright-report
