--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,5 +44,7 @@ extend-include = ["*.ipynb"]
 select = [
     # pycodestyle
     "E",
+    # bugbear: Disallow mutable argument defaults
+    "B006",
 ]
 ignore = ["E501", "E731"]
