Enable local API docs build to pass
Previously it was throwing a warning, which was being ignored. We should
not ignore warnings :)

--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -18,3 +18,5 @@ dependencies:
   - sphinx-togglebutton
   - myst-parser
   - xeus-python # TODO: Do we need this?
+  - pip:
+      - ../python/jupytergis_lab  # For autodoc
