Attempt to fix RTD build

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,8 +25,8 @@ build:
       # Create the env for building the docs
       - /bin/bash --login -c "micromamba env create -n jupytergis-docs -f docs/environment-docs.yml"
       # Create the isolated env for building JupyterGIS
-      - /bin/bash --login -c "micromamba create -n jupytergis-build -c conda-forge nodejs hatch pip python=3.13"
-      - /bin/bash --login -c "micromamba run -n jupytergis-build pip install 'jupyterlab==4.3' 'datamodel-code-generator>=0.23.0'"
+      # - /bin/bash --login -c "micromamba create -n jupytergis-build -c conda-forge nodejs hatch pip python=3.13"
+      # - /bin/bash --login -c "micromamba run -n jupytergis-build pip install 'jupyterlab==4.3' 'datamodel-code-generator>=0.23.0'"
 
     # Override the install step to do nothing - we already created the envs
     install:
@@ -34,16 +34,16 @@ build:
 
     # Before building the docs, build JupyterGIS in its isolated environment,
     # then install the wheels into the docs environment.
-    pre_build:
-      - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm install"
-      - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build"
-      - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build:packages"
-      - |-
-        /bin/bash --login -c "micromamba run -n jupytergis-docs \
-          python -m pip install \
-          $(ls ./python/jupytergis_core/dist/jupytergis*.whl) \
-          $(ls ./python/jupytergis_lab/dist/jupytergis*.whl) \
-          $(ls ./python/jupytergis_qgis/dist/jupytergis*.whl)"
+    # pre_build:
+    #   - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm install"
+    #   - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build"
+    #   - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build:packages"
+    #   - |-
+    #     /bin/bash --login -c "micromamba run -n jupytergis-docs \
+    #       python -m pip install \
+    #       $(ls ./python/jupytergis_core/dist/jupytergis*.whl) \
+    #       $(ls ./python/jupytergis_lab/dist/jupytergis*.whl) \
+    #       $(ls ./python/jupytergis_qgis/dist/jupytergis*.whl)"
 
     build:
       html:
