--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -19,4 +19,6 @@ dependencies:
   - myst-parser
   - xeus-python # TODO: Do we need this?
   - pip:
-      - ../python/jupytergis_lab # For autodoc
+      # Install JupyterGIS so we can autodoc:
+      - ../python/jupytergis_core
+      - ../python/jupytergis_lab
